# gitferrum

./: .gitignore  LICENSE  LICENSING.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  types.rs  watcher.rs
src-tauri/src/git/: actions.rs  diff.rs  graph.rs  mod.rs  refs.rs  status.rs
src/lib/: types.ts
src/lib/__tests__/: graph-layout.test.ts  i18n.test.ts  time.test.ts  toast-store.test.ts  types.test.ts
src/lib/components/: AppShell.svelte  ChangesPanel.svelte  CloneDialog.svelte  CommitDialog.svelte  ConfirmDialog.svelte  ContextMenu.svelte  ContextMenuItem.svelte  CreateTagDialog.svelte  LoadingState.svelte  MergeConflictDialog.svelte  MergeDialog.svelte  SettingsDialog.svelte  StatusBar.svelte  Toast.svelte  UpdateChecker.svelte  WelcomeScreen.svelte
src/lib/components/detail/: CommitDetail.svelte  DetailPane.svelte  DiffView.svelte  FileList.svelte
src/lib/components/graph/: CenterPane.svelte  CommitRow.svelte  GraphLanes.svelte
src/lib/components/sidebar/: BranchList.svelte  RemoteList.svelte  (+5 more)
src/lib/i18n/: en.ts  es.ts  index.ts  pt.ts
src/lib/services/: git.ts  repo-actions.ts  watcher.ts
src/lib/stores/: i18n.svelte.ts  repo.svelte.ts  toast.svelte.ts  ui.svelte.ts
src/lib/utils/: graph-layout.ts  time.ts
